--- a/index.html
+++ b/index.html
@@ -68,6 +68,62 @@
             </div>
         </div>
     </div>
+       <div class="article-clean">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2">
+                    <div class="intro">
+                        <p class="text-center"> </p>
+                    </div>
+
+                    <div class="text">
+                      <img src = "assets/img/logo.png"style="height:200px;margin: 0 auto;display:block;" />
+                        <p>We are a locally based company with 15 years combined experience in demolition and asbestos removal.
+                            &nbsp;</p>
+                        <figure></figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="container-fluid">
+            <hr>
+            <form action="javascript:void(0);" method="get" id="contactForm"><input class="form-control" type="hidden" name="Introduction" value="This email was sent from www.awebsite.com"><input class="form-control" type="hidden" name="subject" value="Awebsite.com Contact Form"><input class="form-control" type="hidden"
+                    name="to" value="email@awebsite.com">
+                <div class="form-row">
+                    <div class="col-md-6">
+                        <div id="successfail"></div>
+                    </div>
+                </div>
+                <div class="form-row" style="text-align:center;">
+                    <div class="col-12 col-md-6" style="margin-left:25%;">
+                        <h2 class="h4"><i class="fa fa-location-arrow"></i> Locate Us</h2>
+                        <div class="form-row">
+                            <div class="col-12">
+                                <div class="static-map"><a href="https://www.google.com/maps/place/Daytona+International+Speedway/@29.1815062,-81.0744275,15z/data=!4m13!1m7!3m6!1s0x88e6d935da1cced3:0xa6b3e1bc0f2fc83a!2s1801+W+International+Speedway+Blvd,+Daytona+Beach,+FL+32114!3b1!8m2!3d29.187028!4d-81.0703076!3m4!1s0x88e6d949a4cb8593:0x1387c6c0b5c8cc97!8m2!3d29.1851681!4d-81.0705292"
+                                        target="_blank" rel="noopener"> <img class="img-fluid" src="assets/img/location.png" alt="Google Map of Daytona International Speedway"></a></div>
+                            </div>
+                            <div class="col-sm-6 col-md-12 col-lg-6">
+                                <h2 class="h4"><i class="fa fa-user"></i> Our Info</h2>
+                                <div><span><strong>Rizov LLC</strong><br></span></div>
+                                <div><span>office@rizovllc.com</span></div>
+                                <div><span>www.rizovllc.com</span></div>
+                                <div><span>862-262-8006</span></div>
+                                <hr class="d-sm-none d-md-block d-lg-none">
+                            </div>
+                            <div class="col-sm-6 col-md-12 col-lg-6">
+                                <h2 class="h4"><i class="fa fa-location-arrow"></i> Our Address</h2>
+                                <div><span>246 Gaston Ave</span></div>
+                                <div><span>Garfield NJ, 07026</span></div>
+                                <div></div>
+                                <hr class="d-sm-none">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
     <div class="carousel slide" data-ride="carousel" id="carousel-1">
         <div class="carousel-inner" role="listbox"></div>
         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next"><span class="sr-only">Next</span></a></div>
