--- a/About.html
+++ b/About.html
@@ -41,7 +41,7 @@
 
                     <div class="text">
                       <img src = "assets/img/logo.png"style="height:200px;margin: 0 auto;display:block;" />
-                        <p>We are a locally based company with 15 years combined experience in demolition and asbestos removal.
+                        <p>We are a locally based company with 15 years combined experience.
                             &nbsp;</p>
                         <figure></figure>
                     </div>
