--- a/index.html
+++ b/index.html
@@ -1,164 +1,139 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rizov</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-    <link rel="stylesheet" href="assets/css/Article-Clean.css">
-    <link rel="stylesheet" href="assets/css/Contact-Form-v2-Modal--Full-with-Google-Map.css">
-    <link rel="stylesheet" href="assets/css/Customizable-Background--Overlay.css">
-    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rizov LLC</title>
+    <meta name="Nova theme" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/responsive.css"/>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
 </head>
 
 <body>
-    <div>
-        <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-            <div class="container"><a class="navbar-brand" href="index.html">Rizov LLC</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse"
-                    id="navcol-1">
-                    <ul class="nav navbar-nav ml-auto">
- 
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div style="background-image:url(&quot;assets/img/bg.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
-                <div class="d-flex align-items-center order-12" style="height:200px;">
-                    <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">Rizov LLC</h1>
-                        <h3 class="text-center" style="color:rgb(242,245,248);padding-top:0.25em;padding-bottom:0.25em;font-weight:normal;">Putting a plan in action, to assure your satisfaction</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="features-boxed">
-        <div class="container">
-            <div class="row justify-content-center features">
-                <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box"><i class="fa fa-map-marker icon"></i>
-                        <h3 class="name"></h3>
-                        <p class="description">We service the Garfield NJ area. If you have any questions please feel free to contact us.</p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box"><i class="fa fa-clock-o icon"></i>
-                        <h3 class="name">Fast</h3>
-                        <p class="description">We are commited to all of our customers. We will make sure the job is completed in a timely manner.</p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box"><i class="fa fa-list-alt icon"></i>
-                        <h3 class="name">Flexible</h3>
-                        <p class="description">Customers are important to us and so is your time. We will work with you on scheduling.&nbsp;</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-       <div class="article-clean">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2">
-                    <div class="intro">
-                        <p class="text-center"> </p>
-                    </div>
 
-                    <div class="text">
-                      <img src = "assets/img/logo.png"style="height:150px;margin: 0 auto;display:block;" />
-                        <p>We are a locally based company with 15 years combined experience in demolition and asbestos removal.
-                            &nbsp;</p>
-                        <figure></figure>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!-- Navigation
+    ================================================== -->
+<div class="hero-background">
     <div>
-        <div class="container-fluid">
-            <hr>
-            <form action="javascript:void(0);" method="get" id="contactForm"><input class="form-control" type="hidden" name="Introduction" value="This email was sent from www.awebsite.com"><input class="form-control" type="hidden" name="subject" value="Awebsite.com Contact Form"><input class="form-control" type="hidden"
-                    name="to" value="email@awebsite.com">
-                <div class="form-row">
-                    <div class="col-md-6">
-                        <div id="successfail"></div>
-                    </div>
-                </div>
-                <div class="form-row" style="text-align:center;">
-                    <div class="col-12 col-md-6" style="margin-left:25%;">
-                        <h2 class="h4"><i class="fa fa-location-arrow"></i> Locate Us</h2>
-                        <div class="form-row">
-                            <div class="col-12">
-                                <div class="static-map"><a href="https://www.google.com/maps/place/Daytona+International+Speedway/@29.1815062,-81.0744275,15z/data=!4m13!1m7!3m6!1s0x88e6d935da1cced3:0xa6b3e1bc0f2fc83a!2s1801+W+International+Speedway+Blvd,+Daytona+Beach,+FL+32114!3b1!8m2!3d29.187028!4d-81.0703076!3m4!1s0x88e6d949a4cb8593:0x1387c6c0b5c8cc97!8m2!3d29.1851681!4d-81.0705292"
-                                        target="_blank" rel="noopener"> <img class="img-fluid" src="assets/img/location.png" alt="Google Map of Daytona International Speedway"></a></div>
-                            </div>
-                            <div class="col-sm-6 col-md-12 col-lg-6">
-                                <h2 class="h4"><i class="fa fa-user"></i> Our Info</h2>
-                                <div><span><strong>Rizov LLC</strong><br></span></div>
-                                <div><span>office@rizovllc.com</span></div>
-                                <div><span>www.rizovllc.com</span></div>
-                                <div><span>862-262-8006</span></div>
-                                <hr class="d-sm-none d-md-block d-lg-none">
-                            </div>
-                            <div class="col-sm-6 col-md-12 col-lg-6">
-                                <h2 class="h4"><i class="fa fa-location-arrow"></i> Our Address</h2>
-                                <div><span>246 Gaston Ave</span></div>
-                                <div><span>Garfield NJ, 07026</span></div>
-                                <div></div>
-                                <hr class="d-sm-none">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-    <div class="carousel slide" data-ride="carousel" id="carousel-1">
-        <div class="carousel-inner" role="listbox"></div>
-        <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next"><span class="sr-only">Next</span></a></div>
-        <ol
-            class="carousel-indicators"></ol>
+        <img class="strips" src="assets/images/strips.png">
     </div>
-    <div class="footer-dark">
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>Services</h3>
-                        <ul>
-                            <li><a href="#">Demoliton</a></li>
-                            <li><a href="#">Asbestos Removal</a></li>
-                            <li><a href="#">Construction</a></li>
-                            <li></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>Contact</h3>
-                        <ul>
-                            <li><a href="#">(P):&nbsp;862-262-8006<br>(E): office@rizovllc.com<br>&nbsp;</a></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 item text">
-                        <p></p>
-                    </div>
-                </div>
-                <p class="copyright">Rizov LLC © 2018</p>
+    <div class="container">
+        <div class="header-container header">
+            <a class="navbar-brand logo" href="#"> <img class="logo" src="assets/images/logo.png"/> </a>
+            <div class="header-right">
+                <a class="navbar-item" href="#team">About us</a>
+                <a class="navbar-item" href="#pricing">Contact Us</a>
             </div>
-        </footer>
+        </div>
+        <!--navigation-->
+
+
+        <!-- Hero-Section
+          ================================================== -->
+
+        <div class="hero row">
+            <div class="hero-right col-sm-6 col-sm-6">
+                <h1 class="header-headline bold">Rizov LLC<br></h1>
+                <h4 class="header-running-text light"> Contact us today to receive a quote on any of your
+                construction needs. </h4>
+            </div><!--hero-left-->
+
+            <div class="col-sm-6 col-sm-6 ipad">
+                <img class="ipad-screen img-responsive" src="assets/images/construction.png"/>
+            </div>
+
+            <div><img class="mouse" src="assets/images/mouse.svg"/></div>
+
+        </div><!--hero-->
+
+    </div> <!--hero-container-->
+
+</div><!--hero-background-->
+
+
+<!-- Features
+  ================================================== -->
+
+<div id="features" class="features-section">
+
+    <div class="features-container row">
+
+        <h2 class="features-headline light">About us</h2>
+
+        <div class="col-sm-4 feature">
+
+            <div class="feature-icon feature-no-display">
+                <img class="feature-img" src="assets/images/responsive.svg">
+            </div>
+            <h5 class="feature-head-text feature-no-display"> Contact us: </h5>
+            <p class="feature-subtext light feature-no-display"> You can reach us by emailing or calling us
+            </br>
+             Email: office@RizovLLC.com
+            </br>
+            Phone: 862-262-8006
+            </p>
+        </div>
+
+        <div class="col-sm-4 feature">
+            <div class="feature-icon feature-no-display feature-display-mid">
+                <img class="feature-img" src="assets/images/customizable.svg">
+            </div>
+            <h5 class="feature-head-text feature-no-display feature-display-mid"> Experience </h5>
+            <p class="feature-subtext light feature-no-display feature-display-mid">We are a locally based company with 15 years combined experience in construction.</p>
+        </div>
+
+        <div class="col-sm-4 feature">
+            <div class="feature-icon feature-no-display feature-display-last">
+                <img class="bullet-img" src="assets/images/design.svg">
+            </div>
+            <h5 class="feature-head-text feature-no-display feature-display-last"> Amazing work</h5>
+            <p class="feature-subtext light feature-no-display feature-display-last"> We take great pride in what we do. We will ensure any work
+            we do are up to not only the standards of the industry but also your standards.</p>
+        </div>
+    </div> <!--features-container-->
+</div> <!--features-section-->
+
+
+<div class="white-section row">
+
+    <div class="imac col-sm-6">
+        <img class="imac-screen img-responsive" src="assets/images/imac.png">
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-animation.js"></script>
-    <script src="assets/js/Contact-Form-v2-Modal--Full-with-Google-Map.js"></script>
+    <!--imac-->
+
+    <div class="col-sm-6">
+
+        <div class="white-section-text">
+
+            <h2 class="imac-section-header light">What we do</h2>
+
+            <div class="imac-section-desc">
+
+            <span>We deliver our work safely. We make sure to provide an injury-free enviroment.
+            We want our employees and clients to be safe when we are working. We are capable of handling any of your
+          construction needs so feel free to contact us today to set up an appointment. </span>
+            </div>
+        </div>
+    </div>
+</div><!--white-section-text-section--->
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+
+<script src="assets/js/script.js"></script>
+
 </body>
 
 </html>
